<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ShopItemFragment"
    android:background="@color/backgroundColor">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/productName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageSwitcher
        android:id="@+id/productImageSwitcher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/product_image_view_context_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescriptionTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/productDescription"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/product_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productSpecsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        style="@style/normalSizeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageSwitcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showMoreSpecsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        style="@style/smallerText"
        android:hint="@string/more_specs_text_view"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSpecsTextView" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/showMoreSpecsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/showMoreSpecsTextView"
        app:layout_constraintTop_toBottomOf="@+id/productSpecsTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/moreSpecsTextView"
        style="@style/smallerText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/more_specs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMoreSpecsTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallerTextButton"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreSpecsTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>